# blockchain-shennannigans

./: .gitignore  Cargo.toml  todo.md
src/: main.rs
src/api/: client.rs  mod.rs  server.rs
src/blockchain/: block.rs  chain.rs  consensus.rs  mempool.rs  mining.rs  mod.rs  transaction.rs
src/frontend/: routes.rs
src/utils/: hash.rs  mod.rs
templates/: block.html  blockchain.html
templates/components/: all_nodes.html  block.html  display_chain.html  message_form.html  node_form.html  node_list.html  notification.html  sync_button.html
templates/layouts/: base.html
templates/responses/: all_nodes.html  node_result.html  sync_result.html
templates/styles/: base_styles.css
templates/views/: blockchain.html  dashboard.html  full_page.html
tests/: api_rest.http  mempool_tests.http  rest_api_calls.html  rest_api_calls.http
