[package]
name = "rustchain"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
sha2 = "0.10"
hex= "0.4"
reqwest = { version="0.12", features= ["json"] }
serde= { version="1.0", features=["derive"] }
serde_json="1.0"
actix-web="4.9.0"
tokio = { version= "1.43.0", features =["full"] }
tokio-macros = "2.5.0"
